Add Multisig.sol and test cases

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "truffle": "^3.2.4"
   },
   "dependencies": {
+    "ethereumjs-abi": "^0.6.4",
     "sleep": "^5.1.1",
     "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "^1.0.7"
